*7258* Less temporary fix for layout bug

--- a/styles/structure/sidebar.less
+++ b/styles/structure/sidebar.less
@@ -9,6 +9,11 @@
  * @brief Classes for the sidebar structure(s)
  */
 
+.pkp_structure_nosidebar {
+	padding-top: 10px;
+	margin-right: 20px;
+}
+
 .pkp_structure_sidebar {
 	padding-top: 10px;
 	border-top: 1px dotted #999;
